# strait

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/agents/: review-worker.md
.claude/skills/: decompose  ninthwave-upgrade  todo-preview  work
.codex/agents/: ninthwave-forward-fixer.toml  ninthwave-implementer.toml  ninthwave-rebaser.toml  ninthwave-reviewer.toml
.devcontainer/feature/: devcontainer-feature.json  install.sh
.github/: copilot-instructions.md  renovate.json5
.github/workflows/: ci.yml  devcontainer-feature.yml  feature-test.yml  release-feature.yml  release.yml  renovate.yml
.ninthwave/: config  config.json  version
.ninthwave/analytics/: 2026-03-26T11-59-05-210Z.json  2026-03-26T12-55-07-019Z.json  2026-03-26T13-54-55-562Z.json  2026-03-27T18-27-51-759Z.json  2026-03-27T21-21-55-079Z.json  2026-03-27T23-28-58-177Z.json  2026-03-28T02-25-29-591Z.json
.ninthwave/decisions/: 2026-04-11T17-49-06Z--H-SES-1.md  2026-04-11T19-21-05Z--H-POL-1.md  2026-04-11T20-35-00Z--M-OBS-1.md  2026-04-16T07-30-30Z--H-CSM-4.md  2026-04-16T12-00-00Z--H-CSM-5.md  2026-04-16T13-00-00Z--M-CSM-6.md
.ninthwave/friction/: 2026-03-26-nono-sandbox-silent-failure.md  2026-04-11T17-56-26Z--H-SES-1.md  2026-04-11T18-02-04Z--H-TUI-1.md  2026-04-11T20-36-42Z--M-OBS-1.md  2026-04-12T07-54-40Z--M-CLI-1.md  2026-04-16T06-24-51Z--H-DC-2.md  2026-04-16T06-36-21Z--H-CSM-3.md  2026-04-16T07-36-59Z--H-CSM-4.md  2026-04-16T12-30-00Z--H-CSM-5.md  2026-04-16T14-00-00Z--M-CSM-6.md  2026-04-17T13-26-28Z--H-ICDP-3.md  2026-04-17T14-11-19Z--H-ICDP-2-auto-merge-stacked.md  2026-04-17T14-11-19Z--H-ICDP-2-parked-rebase.md
.ninthwave/todos/: 1-audit--H-CP-19.md  1-config--H-V2-1.md  1-credentials--H-CP-21.md  1-credentials--H-CP-22.md  1-credentials--H-SV4-1.md  1-credentials--H-SV4-2.md  1-credentials--H-SV4-3.md  1-generate--H-CP-15.md  1-launch--H-CP-13.md  1-mitm--H-CP-17.md  1-mitm--H-V2-3.md  1-network-isolation--C-NI-1.md  1-network-isolation--C-NI-2.md  1-network-isolation--C-NI-3.md  1-replay--H-CP-16.md  1-sigv4--H-CP-18.md  1-sigv4--H-SV4-5.md  1-test--H-CP-14.md  1-test--H-CP-20.md  2-cli--H-CP-1.md  2-cli--M-V2-4.md  2-config--M-V2-2.md  2-container--H-CP-4.md  2-correctness--H-ER-4.md  2-correctness--H-ER-7.md  2-generate--H-CP-8.md  2-launch--H-CP-12.md  2-launch--H-CP-7.md  2-launch--H-CP-7a.md  2-launch--H-CP-7b.md  2-network-isolation--H-NI-4.md  2-network-isolation--H-NI-5.md  2-network-isolation--H-NI-6.md  2-observe--H-CP-3.md  2-policy--H-CP-2.md  2-policy--M-SV4-4.md  2-proxy--H-SV1-1.md  2-proxy--H-SV1-2.md  2-proxy--H-SV1-4.md  2-proxy--H-SV1-6.md  (+43 more)
.ninthwave/work/: 1-blocked-request-intel--H-CSM-2.md  1-cedar-schema-narrowing--H-DC-2.md  1-container-trust-boundary--H-CSM-1.md  1-devcontainer-json-reader--H-DC-4.md  1-dogfood--H-DF-1.md  1-dogfood--H-DF-2.md  1-dogfood--H-DF-3.md  1-dogfood--H-DF-4.md  1-dogfood--H-DF-5.md  1-dogfood--H-DF2-1.md  1-dogfood--H-DF2-2.md  1-dogfood--H-DF2-3.md  1-dogfood--H-DF2-4.md  1-durable-network-policy--H-CSM-4.md  1-host-control-plane--H-HCP-1.md  1-host-control-plane--H-HCP-2.md  1-host-control-plane--H-HCP-3.md  1-host-control-plane--H-HCP-4.md  1-host-control-plane--H-HCP-6.md  1-in-container-data-plane--H-ICDP-1.md  1-in-container-data-plane--H-ICDP-2.md  1-in-container-data-plane--H-ICDP-3.md  1-in-container-data-plane--H-ICDP-4.md  1-in-container-data-plane--H-ICDP-5.md  1-install-surface--H-INST-1.md  1-install-surface--H-INST-2.md  1-interactive-terminal--H-TUI-1.md  1-interactive-terminal--H-TUI-2.md  1-interactive-tests--H-TST-1.md  1-live-decision-api--H-PVT-4.md  1-live-network-decisions--H-CSM-3.md  1-mitm-adoption--H-PVT-1.md  1-network-isolation--C-NI-1.md  1-network-isolation--C-NI-2.md  1-network-isolation--C-NI-3.md  1-network-policy-engine--H-PVT-3.md  1-observation-pipeline-narrowing--H-DC-3.md  1-policy-persistence--H-PVT-5.md  1-product-surface--H-PVT-2.md  1-release-launch--C-RL-1.md  (+32 more)
.opencode/: opencode.jsonc
.opencode/agents/: todo-worker.md
.opencode/plans/: 1776234011325-kind-engine.md
Formula/: strait.rb
agent/: Cargo.toml
agent/src/: ca.rs  ca_trust.rs  config.rs  credential_injector.rs  decision_client.rs  entrypoint.rs  host_client.rs  iptables.rs  lib.rs  main.rs  observations.rs  proxy.rs  so_original_dst.rs
agent/tests/: ca_trust_integration.rs  entrypoint_integration.rs  feature_config_contract.rs  invariants.rs  proxy_loopback.rs
agent/tests/fixtures/: Dockerfile.invariants
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
desktop/electron/: controlClient.ts  ipc.ts  main.ts  preload.ts  tray.ts
desktop/src/: App.tsx  Onboarding.tsx  Sessions.tsx  (+6 more)
docs/: bring-your-own-sandbox.md  desktop-shell.md  devcontainer.md  getting-started.md
examples/: aws.cedar  aws.cedarschema  github.cedar  github.cedarschema  strait.toml
gateway/: Cargo.toml
gateway/src/: main.rs
host/: Cargo.toml
host/src/: config.rs  credentials.rs  decisions.rs  grpc.rs  lib.rs  listener.rs  main.rs  observations.rs  presets.rs  rule_store.rs  sigv4.rs  templates.rs
host/src/migrations/: 001_initial.sql  mod.rs
host/tests/: decisions.rs  integration.rs  observation_pipeline.rs  presets_integration.rs  rule_store_integration.rs
packaging/: host.toml.example
proto/: Cargo.toml  build.rs  control.proto  strait_host.proto
proto/src/: lib.rs
src/: audit.rs  ca.rs  config.rs  container.rs  control.rs  credentials.rs  decisions.rs  diff.rs  explain.rs  generate.rs  health.rs  launch.rs  lib.rs  main.rs  mitm.rs  observe.rs  policy.rs  presets.rs  replay.rs  sigv4.rs  templates.rs  watch.rs
templates/: README.md  aws-s3-readonly.cedar  aws-s3-readonly.cedarschema  aws-s3-readwrite.cedar  aws-s3-readwrite.cedarschema  claude-code.cedar  container-sandbox.cedar  github-org-contributor.cedar  github-org-contributor.cedarschema  github-org-readonly.cedar  github-org-readonly.cedarschema  strait.cedarschema
tests/: control_service_integration.rs  integration.rs  launch_integration.rs  packaging.rs  preset_policy_library.rs
(+65 files in other folders)
