[package]
name = "strait"
version = "0.1.0"
edition = "2021"
description = "HTTPS proxy with Cedar policy evaluation, credential injection, and audit logging"
license = "MIT"
repository = "https://github.com/ninthwave-sh/strait"
readme = "README.md"

[dependencies]
hudsucker = { version = "0.22", features = ["rustls-client"] }
cedar-policy = "4"
rcgen = { version = "0.13", features = ["pem"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
webpki-roots = "1"
http = "1"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
