[workspace]
members = [".", "gateway"]
resolver = "2"

[package]
name = "strait"
version = "0.2.0"
edition = "2021"
description = "Container-scoped MITM policy platform for AI agents"
license = "Apache-2.0"
repository = "https://github.com/ninthwave-io/strait"
readme = "README.md"

[dependencies]
prost = "0.13"
hudsucker = { version = "0.22", features = ["rustls-client"] }
cedar-policy = "4"
rcgen = { version = "0.13", features = ["pem"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
webpki-roots = "1"
http = "1"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
toml = "0.8"
anyhow = "1"
bollard = "0.18"
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
sha2 = "0.10"
hex = "0.4"
arc-swap = "1"
tempfile = "3"
terminal_size = "0.4"
futures-util = "0.3"
libc = "0.2"
signal-hook = "0.3"
tar = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
tonic-health = "0.12"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
tempfile = "3"
libc = "0.2"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[[bin]]
name = "mock-tui-fixture"
path = "tests/fixtures/mock_tui.rs"

[[bin]]
name = "live-policy-probe-fixture"
path = "tests/fixtures/live_policy_probe.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
