[workspace]
members = [".", "agent", "gateway", "host", "proto"]
resolver = "2"

[package]
name = "strait"
version = "0.2.0"
edition = "2021"
description = "Container-scoped MITM policy platform for AI agents"
license = "Apache-2.0"
repository = "https://github.com/ninthwave-io/strait"
readme = "README.md"

[dependencies]
hudsucker = { version = "0.22", features = ["rustls-client"] }
cedar-policy = "4"
rcgen = { version = "0.13", features = ["pem"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
webpki-roots = "1"
http = "1"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
toml = "0.8"
anyhow = "1"
arc-swap = "1"
tempfile = "3"
terminal_size = "0.4"
libc = "0.2"
signal-hook = "0.3"
strait-host = { path = "host" }

[dev-dependencies]
tempfile = "3"
libc = "0.2"

[[bin]]
name = "mock-tui-fixture"
path = "tests/fixtures/mock_tui.rs"

[[bin]]
name = "live-policy-probe-fixture"
path = "tests/fixtures/live_policy_probe.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
