[package]
name = "strait-agent"
version = "0.1.0"
edition = "2021"
description = "In-container agent binary for strait: entrypoint + MITM proxy"
license = "Apache-2.0"
repository = "https://github.com/ninthwave-io/strait"

[[bin]]
name = "strait-agent"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Privilege-drop + capability handling are only meaningful on Linux.
# The agent binary ultimately ships inside a Linux container; these deps
# are gated so `cargo test` still works on macOS / other dev hosts.
[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
libc = "0.2"
nix = { version = "0.29", features = ["user", "process", "fs"] }

[dev-dependencies]
tempfile = "3"
