[package]
name = "strait-agent"
version = "0.1.0"
edition = "2021"
description = "In-container agent binary for strait: entrypoint + MITM proxy"
license = "Apache-2.0"
repository = "https://github.com/ninthwave-io/strait"

[[bin]]
name = "strait-agent"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Path dep on the top-level strait crate so the agent can reuse the Cedar
# policy engine and the session-local CA. Kept narrow on purpose: the agent
# must stay small, so we only pull in what's needed for policy eval and
# leaf cert issuance. The full MITM pipeline is ported (not re-exported)
# into `proxy.rs` so the new SO_ORIGINAL_DST entry path is a first-class
# part of the agent crate.
strait = { path = ".." }
strait-proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.8"
tonic = { version = "0.12", features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
webpki-roots = "1"

# Privilege-drop + capability handling are only meaningful on Linux.
# The agent binary ultimately ships inside a Linux container; these deps
# are gated so `cargo test` still works on macOS / other dev hosts.
[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
libc = "0.2"
nix = { version = "0.29", features = ["user", "process", "fs"] }

[dev-dependencies]
rcgen = { version = "0.13", features = ["pem"] }
tempfile = "3"
