[package]
name = "strait-host"
version = "0.1.0"
edition = "2021"
description = "Host control plane process for strait"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "strait-host"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
