[package]
name = "strait-host"
version = "0.1.0"
edition = "2021"
description = "Host control plane process for strait"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "strait-host"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-smithy-runtime-api = "1"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
hex = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
prost = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strait-proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
toml = "0.8"
tonic = { version = "0.12", features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
strait = { path = ".." }
strait-agent = { path = "../agent" }
tempfile = "3"
