[package]
name = "strait-proto"
version = "0.1.0"
edition = "2021"
description = "Generated gRPC types for the strait host control plane"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
